<resources>
    <string name="label.drawer.open">Open</string>
    <string name="label.drawer.close">Close</string>
    <string-array name="label_drawer_digits">
        <item>@string/label.menu.oneparagraph</item>
        <item>@string/label.menu.twoparagraphs</item>
        <item>@string/label.menu.threeparagraphs</item>
        <item>@string/label.menu.fourparagraphs</item>
        <item>@string/label.menu.fiveparagraphs</item>
    </string-array>
    <string name="label.menu.oneparagraph">One</string>
    <string name="label.menu.twoparagraphs">Two</string>
    <string name="label.menu.threeparagraphs">Three</string>
    <string name="label.menu.fourparagraphs">Four</string>
    <string name="label.menu.fiveparagraphs">Five</string>
    <string name="label.action.refresh">Refresh</string>
    <string name="activity_splash">splash</string>
    <string name="activity_home">home</string>
    <string name="fragment_lorem">Lorem</string>
    <string name="link_article">link</string>
    <string name="link_action">click</string>
    <string name="dialog.ok_button">OK</string>
    <string name="dialog.cancel_button">Cancel</string>
    <string name="dialog.deny_button">Deny</string>
    <string name="dialog.allow_button">Allow</string>
    <string name="dialog.yes_button">Yes</string>
    <string name="dialog.no_button">No</string>
    <string name="dialog.logout_button">Logout</string>
    <string name="internet_not_available">Please check your internet connection or Try again later</string>
    <string name="permission.storage_rationale">The permission to write into the external storage is needed to save the
        page content.
    </string>
    <string name="label.text_not_ready">Text not ready for saving</string>
    <string name="label.text_saved">Text saved</string>
    <string name="label.text_not_saved">An error occurred and the text could not be saved</string>
    <string name="prompt_name">Name</string>
    <string-array name="tab_title">
        <item></item>
        <item>Cart</item>
        <item>Learn</item>
        <item>Account</item>
    </string-array>
    <string name="title_orders">ORDERS</string>
    <string name="title_my_orders">My Orders</string>
    <string name="title_account">Account</string>
    <string name="title_change_account_settings">Change account settings</string>
    <string name="title_manage_payment_option">Manage payment information</string>
    <string name="title_manage_address">Manage addresses</string>
    <string name="title_my_pets">My Pets</string>
    <string name="title_my_vets">My Vets</string>
    <string name="title_set_refill_schedule">Refill Reminder</string>
    <string name="title_setting">SETTINGS</string>
    <string name="title_use_fingerprint">Use Fingerprint</string>
    <string name="title_push_notification">Push Notifications</string>
    <string name="title_more">MORE</string>
    <string name="title_contact_us">Contact us</string>
    <string name="title_signout">Sign out</string>
    <string name="push_notification_desc">Allow notification for order status, vet contact, refill reminder, offer, and
        product recall
    </string>
    <string name="label_toll_free_number">Toll Free Number</string>
    <string name="label_main_phone_number">Main Phone Number</string>
    <string name="label_pharmacy_phone_number">Pharmacy Phone Number</string>
    <string name="label_pharmacy_fax_number">Pharmacy Fax Number</string>
    <string name="label_email_address">Email Address</string>
    <string name="description_email_address">Emails received after normal business hours are answered the
        next day. If an immediate answer is required or if your pet is in need of urgent or emergency care, contact your
        pet\'s veterinarian immediately.
    </string>
    <string name="title_contact_us_caps">Contact Us</string>
    <string name="label_mailing_address">Mailing Address</string>
    <string name="order_txt">Order</string>
    <string name="date_txt">Date</string>
    <string name="status_txt">Status</string>
    <string name="label.login_caps">LOG IN</string>
    <string name="label_email">Enter Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_skip">"SKIP"</string>
    <string name="label_login">Log In</string>
    <string name="label_login_forgot_password">FORGOT PASSWORD?</string>
    <string name="label_no_account_sign_up">Don\'t have an account?</string>
    <string name="signup_txt">SIGN UP</string>
    <string name="enter_email_for_temporary_password">Enter your email address and we will send you reset instructions</string>
    <string name="label_email_my_password">EMAIL RESET INSTRUCTIONS</string>
    <string name="label_email_sent">Email Sent</string>
    <string name="label_confirm_email">Confirm Email</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_create_account">Create Account</string>
    <string name="label_billing_address">Billing Address</string>
    <string name="label_shipping_address">Shipping Address</string>
    <string name="label_same_billing_shipping">Same Billing and Shipping Address</string>
    <string name="label_pet_vet_title">Pet &amp; Vet Information</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="error_confirm_email_must_match">Confirmation email must match your email address</string>
    <string name="error_confirm_password_must_match">Password doesn’t match</string>
    <string name="error_first_name_required">First name is required</string>
    <string name="error_first_name_invalid">First name invalid</string>
    <string name="error_last_name_required">Last name is required</string>
    <string name="error_last_name_invalid">Last name invalid</string>
    <string name="error_address_required">Address is required</string>
    <string name="error_address_invalid">Address invalid</string>
    <string name="error_city_required">City name is required</string>
    <string name="error_city_invalid">City name invalid</string>
    <string name="error_state_required">State name is required</string>
    <string name="error_zip_required">Zip code is required</string>
    <string name="error_zip_invalid">Zip code invalid</string>
    <string name="error_phone_required">Phone number is required</string>
    <string name="error_phone_invalid">Phone number invalid</string>
    <string name="error_country_required">Country is required</string>
    <string name="label_unable_to_update_password">Unable to update your password</string>
    <string name="label_reset_password">Reset your password</string>
    <string name="label_reset_password_caps">Reset Your Password</string>
    <string name="title.fingerprint_login">FINGERPRINT LOGIN</string>
    <string name="title.use_password_to_signin">USE PASSWORD TO SIGN IN</string>
    <string name="label.use_password">USE PASSWORD</string>
    <string name="hint.fingerprint">Touch sensor</string>
    <string name="description.fingerprint">Confirm fingerprint to continue.</string>
    <string name="label.fingerprint_error">Fingerprint not recognized.\nTry again.</string>
    <string name="label.fingerprint_recognized">Fingerprint recognized</string>
    <string name="label.fingerprint_continue">CONTINUE</string>
    <string name="label.fingerprint_cancel">CANCEL</string>
    <string name="label.type_password_description">Type your password to continue.</string>
    <string name="label.fingerprint_forgot_password">FORGOT PASSWORD</string>
    <string name="description.send_email">An email will be sent to the address below with information to reset your
        password.
    </string>
    <string name="label.send_email">SEND EMAIL</string>
    <string name="label.enter_password">ENTER PASSWORD</string>
    <string name="title.enter_account_info">ENTER ACCOUNT INFORMATION</string>
    <string name="title_activity_account_settings">Account settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_confirm_email">Confirm Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_edit">Edit</string>
    <string name="action_done">Done</string>
    <string name="accountSettingsNameEmptyError">Name is required</string>
    <string name="accountSettingsEmailEmptyError">Email is required</string>
    <string name="accountSettingsEmailInvalidError">Email address must be valid</string>
    <string name="accountSettingsPasswordEmptyError">Password is required</string>
    <string name="accountSettingsConfirmPasswordEmptyError">Confirm Password is required</string>
    <string name="accountSettingsPasswordInvalidError">Password must be 8 characters long with one number and one
        capital letter
    </string>
    <string name="accountSettingsPasswordRequirement">Minimum 8 characters (Must include one capital letter, one lowercase letter and one number.)</string>
    <string name="accountSettingsConfirmPasswordInvalidError">Password does not match</string>
    <string name="accountSettingsChangedSuccessfully">Settings changed successfully</string>
    <string name="noSavedCardsAvailableMessage">You haven\'t stored a payment method</string>
    <string name="saveCardForFasterCheckoutMessage">Store a payment method for faster checkout.</string>
    <string name="edit">EDIT</string>
    <string name="phoneNumberInAddress">Phone: %s</string>
    <string name="defaultShippingAddress">default shipping address</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_addressLine1">Address Line 1</string>
    <string name="prompt_aptOrSuite">Apt/Suite #</string>
    <string name="prompt_city">City</string>
    <string name="prompt_stateOrProvinceOrRegion">State / Province / Region</string>
    <string name="prompt_zipcode">Zipcode</string>
    <string name="prompt_phoneNumber">Phone Number</string>
    <string name="prompt_countryName">Country</string>
    <string name="defaultShippingAddress_switch">Default shipping address</string>
    <string name="noPetTxt">You have no pets</string>
    <string name="addPetDescription">Add a pet to your account to receive customized recommendations and educational
        tips
    </string>
    <string name="email_us">EMAIL US</string>
    <string name="label_call_us">CALL +1 (800) 738 6337</string>
    <string name="live_chat">LIVE CHAT</string>
    <string name="add_new_vet_txt">Add New Vet</string>
    <string name="required_rx_medication_txt">Required for RX Medications</string>
    <string name="cannot_find_vet_desc">As a licensed pharmacy we are required by law to contact your veterinarian to
        obtain authorization for your pet\'s prescription medications.
    </string>
    <string name="enter_vet_clinic_txt">Enter your vet or clinic\’s name and phone number below.</string>
    <string name="clinic_name_txt">Clinic Name</string>
    <string name="input_field_txt">Vet\'s Name</string>
    <string name="vet_phone_number_txt">Vet\'s Phone Number</string>
    <string name="no_medication_reminders_txt">You have no medication reminders</string>
    <string name="pet_medication_reminder_description">Add a reminder to receive a notification on when to administer
        your pet\'s medication.
    </string>
    <string name="add_reminder_txt">Add a Reminder</string>
</resources>