<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            style="@style/dialog_button_style"
            android:background="@drawable/rectangular_background"
            android:text="@string/email_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stateListAnimator="@null"
            android:id="@+id/btn_email_us"/>
    <Button
            style="@style/dialog_button_style"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/rectangular_background"
            android:text="@string/label_call_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stateListAnimator="@null"
            android:id="@+id/btn_call_us"/>
    <Button
            style="@style/dialog_button_style"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/rectangular_background"
            android:text="@string/live_chat"
            android:layout_width="match_parent"
            android:stateListAnimator="@null"
            android:layout_height="wrap_content"
            android:id="@+id/btn_live_chat"/>
</LinearLayout>