<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/dp_16">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/required_rx_medication_txt"
                style="@style/cart_item_title"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cannot_find_vet_desc"
                android:layout_marginTop="@dimen/dp_10"
                style="@style/rounded_button_text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_vet_clinic_txt"
                android:layout_marginTop="@dimen/dp_31"
                style="@style/formlabel"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/clinicNameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StyledEditTextHintLayout"
                app:hintTextAppearance="@style/StyledEditTextFloatingLabel"
                android:layout_marginTop="@dimen/dp_48">

                <EditText
                    android:id="@+id/clinic_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/clinic_name_txt"
                    android:maxLength="@integer/characterLimit_30"
                    android:singleLine="true"
                    style="@style/StyledEditText"
                    android:textColor="@color/edittext_selector"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputFieldInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StyledEditTextHintLayout"
                app:hintTextAppearance="@style/StyledEditTextFloatingLabel"
                android:layout_marginTop="@dimen/dp_10">

                <EditText
                    android:id="@+id/input_field_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_field_txt"
                    android:maxLength="@integer/characterLimit_30"
                    android:singleLine="true"
                    style="@style/StyledEditText"
                    android:textColor="@color/edittext_selector"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/phoneInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StyledEditTextHintLayout"
                app:hintTextAppearance="@style/StyledEditTextFloatingLabel"
                android:layout_marginTop="@dimen/dp_10">

                <EditText
                    android:id="@+id/phone_number_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vet_phone_number_txt"
                    android:maxLength="10"
                    android:singleLine="true"
                    style="@style/StyledEditText"
                    android:textColor="@color/edittext_selector"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>