<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/emptyMedicationReminders"
              android:gravity="center"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_petprofileemptyreminder"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_34"
            style="@style/styledefault"
            android:text="@string/no_medication_reminders_txt"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/paragraph"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_19"
            android:layout_marginLeft="@dimen/dp_28"
            android:layout_marginRight="@dimen/dp_28"
            android:text="@string/pet_medication_reminder_description"/>
    <Button
            android:id="@+id/addReminder_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            style="@style/label"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_25"
            android:background="@color/petmeds_blue"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_reminder_txt"/>

</LinearLayout>