<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_16">

    <TextView
        android:id="@+id/addressName_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Todd Shapiro"
        />


    <TextView
        android:id="@+id/addressLine1_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressName_label"
        android:text="232 Marina Ave"
        />

    <TextView
        android:id="@+id/addressLine2_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressLine1_label"
        android:text="Venice Beach, CA 10290"/>

    <TextView
        android:id="@+id/country_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressLine2_label"
        android:text="United States"/>

    <TextView
        android:id="@+id/phoneNumber_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/country_label"
        android:text="@string/phoneNumberInAddress"/>

    <TextView
        android:id="@+id/isAddressSetDefault_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNumber_label"
        android:text="@string/defaultShippingAddress"/>

    <TextView
        android:id="@+id/dummyLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/common_google_signin_btn_text_light_default"
        android:layout_below="@id/isAddressSetDefault_label"
        />
    <Button
        android:id="@+id/editAddress_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dummyLine"
        android:layout_centerHorizontal="true"
        android:text="@string/edit"/>


</RelativeLayout>